--- a/templates/email_confirmation.html
+++ b/templates/email_confirmation.html
@@ -1,9 +1,8 @@
 {% autoescape off %} 
 
-Hello {{ name }}!! 
-Welcome Fx Binary!!
-Please confirm your email by clicking on the following link. 
-Confirmation Link: 
+Hello {{ name }}
+Welcome to Fx Binary
+Please confirm your email by clicking on the following link:
 
 http://{{domain}}{% url 'activate' uidb64=uid token=token %} 
 
